Bug#18396 Identifiers: Byte with value 255 not allowed Old FRM files didn't allow byte 255 as a column name part. Since now we store column names in UTF8, this restriction is not required anymore: 255 is not a valid byte in UTF8. Fix: removing checking against 255.